fixes bad text alignment

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ p {
     font-size: 16px;
     line-height: 31px;
     color:black;
+    text-align: center;
     margin: 0 15%;
 }
 
@@ -30,7 +31,7 @@ h1 {
     font-size: 36px;
     font-weight: 400;
     font-style: normal;
-    margin: 0 15%;
+    text-align: center;
     
 }
 h2 {
@@ -38,14 +39,14 @@ h2 {
     font-size: 24px;
     font-weight: 400;
     font-style: normal;
-    margin: 0 15%;
+    text-align: center;
 }
 h3 {
     font-family: "Stardos Stencil", system-ui;
     font-size: 18px;
     font-weight: 400;
     font-style: normal;
-    margin: 0 15%;
+    text-align: center;
 }
 
 body {
